[workspace]
members = ["sys", "macros"]
exclude = [
    "examples",
    "tests",
    ".gitmodules",
    "gen", 
    "WebKit"
]

[package]
name = "rust_jsc"
exclude = [
    "examples",
    "tests",
    ".gitmodules",
    "gen", 
    "WebKit"
]
description = "Low-level bindings to JavaScriptCore"
keywords = [ "javascriptcore", "javascript" ]
authors = [ "Kevin Caicedo <ing.sys.kevincaicedo@gmail.com>" ]
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/kevincaicedo/rust-jsc"
readme = "README.md"

[dependencies]
rust_jsc_sys = { path = "sys", features = ["patches"], version = "0.1.2" }
rust_jsc_macros = { path = "macros", version = "0.1.2" }