[workspace]
members = ["sys", "macros"]
exclude = [
    "examples",
    "tests",
    ".gitmodules",
    "gen",
    "WebKit"
]

[package]
name = "rust_jsc"
exclude = [
    "examples",
    "tests",
    ".gitmodules",
    ".github",
    "gen",
    "Dockerfile",
    "Dockerfile.arm",
    "Dockerfile.musl",
    "WebKit"
]
description = "High-level bindings to JavaScriptCore"
keywords = [ "javascriptcore", "javascript" ]
authors = [ "Kevin Caicedo <ing.sys.kevincaicedo@gmail.com>" ]
version = "0.5.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/kevincaicedo/rust-jsc"
readme = "README.md"

[dependencies]
rust_jsc_sys = { path = "sys", version = "0.4.2" }
rust_jsc_macros = { path = "macros", version = "0.2.1" }
