[package]
name = "rust_jsc_macros"
description = "Macros for rust_jsc"
version = "0.1.9"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1.0.36"
proc-macro2 = "1.0.93"
syn = { version = "2.0.63", features = ["full"] }
