[package]
name = "rust_jsc_sys"
description = "Low-level bindings to JavaScriptCore"
keywords = [ "javascriptcore", "javascript" ]
authors = [ "Kevin Caicedo <ing.sys.kevincaicedo@gmail.com>" ]
repository = "https://github.com/kevincaicedo/rust-jsc"
version = "0.4.1"
edition = "2021"
license = "MIT"
build = "build.rs"

[lib]
